[package]
name = "bool-logic"
version = "0.2.0"
edition = "2021"
description = "A library for manipulating and evaluating boolean expressions"
license.workspace = true
repository.workspace = true

[dependencies]
replace_with = "0.1.7"

[dependencies.nugine-rust-utils]
version = "0.3.1"
path = "../rust-utils"
