[package]
name = "codegen-cfg"
version = "0.2.0"
edition = "2021"
description = "A codegen tool for Rust `cfg` expressions"
license.workspace = true
repository.workspace = true

[dependencies.bool-logic]
path = "../bool-logic"
version = "0.2.0"

[dependencies.nugine-rust-utils]
version = "0.3.1"
path = "../rust-utils"
features = ["std"]
