[package]
name = "codegen-libc"
version = "0.2.1"
edition = "2021"
rust-version = "1.59.0"
description = "A codegen tool for extracting libc cfg"
license.workspace = true
repository.workspace = true

[[bin]]
name = "codegen-libc"
required-features = ["binary"]

[features]
binary = ["dep:clap", "dep:env_logger"]

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
camino = { version = "1.1.4", features = ["serde1"] }
clap = { version = "4.2.7", features = ["derive"], optional = true }
env_logger = { version = "0.11.0", optional = true }
log = "0.4.17"
once_cell = "1.17.1"
regex = "1.8.1"
serde = "1.0.163"
walkdir = "2.3.3"
syn = { version = "2.0.16", features = ["full", "visit", "visit-mut", "extra-traits"] }
quote = "1.0.27"
proc-macro2 = "1.0.57"

[dependencies.codegen-cfg]
path = "../codegen-cfg"
version = "0.2.0"

[dependencies.nugine-rust-utils]
version = "0.3.1"
path = "../rust-utils"
features = ["std"]
