[package]
name = "ordered-vecmap"
version = "0.2.0"
edition = "2021"
description = "Ordered map and set based on vectors and binary search"
categories = ["data-structures"]
keywords = ["ordered", "map", "set"]
license.workspace = true
repository.workspace = true

[dependencies]
serde = { version = "1.0.137", optional = true, default-features = false, features = ["alloc"] }

[dev-dependencies]
criterion = "0.5.1"
fnv = "1.0.7"
rand = "0.8.5"

[[bench]]
name = "maps"
harness = false
