[package]
name = "nugine-rust-utils"
version = "0.1.2-dev"
edition = "2021"
description = "Nugine's personal Rust utilities"
license = "MIT"
repository = "https://github.com/Nugine/rust-utils"

[lib]
name = "rust_utils"

[features]
default = []
std = ["alloc"]
alloc = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
