[package]
name = "nugine-rust-utils"
version = "0.2.0-dev"
edition = "2021"
description = "Nugine's personal Rust utilities"
license = "MIT"
repository = "https://github.com/Nugine/rust-utils"

[lib]
name = "rust_utils"

[features]
default = ["std"]
std = ["alloc", "simdutf8?/std"]
alloc = []
ascii = []
utf8 = ["dep:simdutf8"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
simdutf8 = { version = "0.1.4", default-features = false, optional = true }
