[package]
name = "nugine-rust-utils"
version = "0.3.1"
edition = "2021"
description = "Nugine's personal Rust utilities"
license.workspace = true
repository.workspace = true

[lib]
name = "rust_utils"

[features]
default = ["std"]
std = ["alloc", "simdutf8/std"]
alloc = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
simdutf8 = { version = "0.1.4", default-features = false }
