[package]
name = "transform-stream"
version = "0.3.0"
authors = ["Nugine <nugine@foxmail.com>"]
edition = "2021"
description = "Lightweight async stream wrapper"
keywords = ["async"]
categories = ["asynchronous"]
readme = "README.md"
license.workspace = true
repository.workspace = true

[dependencies]
futures-core = "0.3.26"

[dev-dependencies]
futures-executor = "0.3.26"
futures-util = "0.3.26"
