[package]
name = "wgp"
version = "0.3.0"
edition = "2021"
description = "Yet another waitgroup implementation"
categories = ["asynchronous", "concurrency"]
keywords = ["waitgroup", "notify", "wake", "futures", "async"]
readme = "README.md"
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["futures-util"]

[dependencies]
atomic-waker = { version = "1.0.0", optional = true }
futures-util = { version = "0.3.19", optional = true, default-features = false }

[dev-dependencies]
tokio = { version = "1.16.1", features = ["rt-multi-thread", "time", "macros"] }
